<resources>
    <string name="app_name" translatable="false">Gotta Watch</string>

    <string name="iv_search_description">Image of motion picture</string>
    <string name="iv_type_search_description">Image which shows type of motions picture</string>
    <string name="menu_item_show_all_main">Show all motion pictures</string>
    <string name="menu_item_favorite_main">Show favorite movies</string>
    <string name="menu_item_watched_main">Show seen movies</string>
    <string name="tv_main_show_all">My Movies</string>
    <string name="tv_main_show_favorite">Watchlist</string>
    <string name="tv_main_show_seen">Seen Movies</string>
    <string name="tv_main_empty_rv_welcome">Welcome!</string>
    <string name="tv_main_empty_rv">There are no favorite movies yet. Start looking for them!</string>
    <string name="search_title">Search</string>
    <string name="sort_year">Sort after Year</string>
    <string name="filter_type_movie">Only show movies</string>
    <string name="filter_type_series">Only show series</string>
    <string name="hint_title_search">Search Title</string>

    <string name="tvMovieRating">Rating: %1.1f</string>
    <string name="tvMovieRatingNull">Rating: -</string>
    <string name="shareMovie">I watched the movie %1$s today.</string>
    <string name="tvActor">Actors:</string>
    <string name="errorMessageShare">No messenger found!</string>
    <string name="shareSeries">I watched the series %1$s today.</string>
    <string name="tabFavorites">Overview</string>
    <string name="tabSearch">Search</string>
    <string name="tvSeasons">Seasons: %1$d</string>
    <string name="tvYearSince">since %1$s</string>

    <string name="motionPicture_error_on_failure"> No network is connected reload the App later!</string>
    <string name="motionPicture_error_NOT_succsessfull"> API is not available or false reload the App later!</string>
    <string name="outputApiObject"> No Data exist! </string>

    <string name="color_default">Default</string>
    <string name="color_black">Black</string>
    <string name="color_grey">Grey</string>
    <string name="color_lime">Lime</string>
    <string name="color_blue">Blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_dark_cyan">Dark Cyan</string>
    <string name="color_purple">Purple</string>
    <string name="color_dark_blue">Dark Blue</string>
    <string name="color_light_grey">Light Grey</string>
    <string name="color_beige">Beige</string>
    <string name="menu_item_change_color">Change background color...</string>
    <string name="menu_item_about">About</string>
    <string name="tvDescription">The app to search and manage all of your favorite and seen movies &amp; TV shows.</string>
    <string name="tvDevelopers" translatable="false">Mohamed Ali El-Maoula, \nElena Ozsvald, \nMustafa Soput, \nKathrin Ulmer</string>
    <string name="tvDirectedBy" translatable="false">F. Schütz</string>
    <string name="tvLabelDirectedBy">Directed by:</string>
    <string name="tvLabelDevelopers">Developers:</string>
    <string name="tvLabelApi" translatable="false">API:</string>
    <string name="tvApi" translatable="false">https://www.omdbapi.com/</string>
    <string name="tvLabelDatasource">Datasource:</string>
    <string name="tvDatasource" translatable="false">IMDB</string>
    <string name="iv_about_logo_description">App Icon</string>
</resources>