<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- light colors group -->
    <group android:id="@+id/group_light" android:checkableBehavior="single">
        <item android:id="@+id/item_default_light"
            android:title="@string/color_default" />
        <item android:id="@+id/item_red"
            android:title="@string/color_red" />
        <item android:id="@+id/item_blue"
            android:title="@string/color_blue" />
        <item android:id="@+id/item_purple"
            android:title="@string/color_purple" />
    </group>
    <!-- dark colors group -->
    <group android:id="@+id/group_dark" android:checkableBehavior="single">
        <item android:id="@+id/item_default_dark"
            android:title="@string/color_default" />
        <item android:id="@+id/item_black"
            android:title="@string/color_black" />
        <item android:id="@+id/item_grey"
            android:title="@string/color_grey" />
    </group>

</menu>