<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_show_all_main"
        android:icon="@drawable/ic_show_all"
        android:title="@string/menu_item_show_all_main"
        android:tooltipText="@string/menu_item_show_all_main"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_favorite_main"
        android:icon="@drawable/ic_star_favorite"
        android:title="@string/menu_item_favorite_main"
        android:tooltipText="@string/menu_item_favorite_main"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_watched_main"
        android:icon="@drawable/ic_watched"
        android:title="@string/menu_item_watched_main"
        android:tooltipText="@string/menu_item_watched_main"
        app:showAsAction="ifRoom"/>
</menu>