<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constrLayoutAbout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineHori1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/ivAboutLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineHori1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_v1"
        android:contentDescription="@string/iv_about_logo_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHori1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHori2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/tvDescription"
        style="@style/TextViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHori1" />
    <TextView
        android:id="@+id/tvLabelDevelopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/tvLabelDevelopers"
        style="@style/TextViewStyle"
        app:layout_constraintEnd_toStartOf="@id/guidelineVert"
        app:layout_constraintTop_toBottomOf="@id/guidelineHori2"
        />
    <TextView
        android:id="@+id/tvDevelopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDevelopers"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guidelineVert"
        app:layout_constraintTop_toTopOf="@id/tvLabelDevelopers"
        />
    <TextView
        android:id="@+id/tvLabelDirectedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tvLabelDirectedBy"
        style="@style/TextViewStyle"
        app:layout_constraintEnd_toStartOf="@id/guidelineVert"
        app:layout_constraintTop_toBottomOf="@id/tvDevelopers"
        />
    <TextView
        android:id="@+id/tvDirectedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDirectedBy"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guidelineVert"
        app:layout_constraintTop_toTopOf="@id/tvLabelDirectedBy"
        />

    <TextView
        android:id="@+id/tvLabelApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tvLabelApi"
        style="@style/TextViewStyle"
        app:layout_constraintEnd_toStartOf="@id/guidelineVert"
        app:layout_constraintTop_toBottomOf="@id/tvDirectedBy"
        />

    <TextView
        android:id="@+id/tvApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvApi"
        android:autoLink="web"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guidelineVert"
        app:layout_constraintTop_toTopOf="@id/tvLabelApi"
        />

    <TextView
        android:id="@+id/tvLabelDatasource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tvLabelDatasource"
        style="@style/TextViewStyle"
        app:layout_constraintEnd_toStartOf="@id/guidelineVert"
        app:layout_constraintTop_toBottomOf="@id/tvApi"
        />

    <TextView
        android:id="@+id/tvDatasource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDatasource"
        style="@style/TextViewStyle"
        app:layout_constraintStart_toEndOf="@id/guidelineVert"
        app:layout_constraintTop_toTopOf="@id/tvLabelDatasource"
        />

</androidx.constraintlayout.widget.ConstraintLayout>